--- a/.github/workflows/patch_vbmeta.yml
+++ b/.github/workflows/patch_vbmeta.yml
@@ -55,3 +55,17 @@ jobs:
     - name: Link to Release
       run: |
         echo "https://github.com/${GITHUB_REPOSITORY}/releases/tag/${{ github.run_id }}"
+
+    - name: Check if tag exists
+    run: |
+      if git rev-parse "refs/tags/${{ github.ref_name }}" >/dev/null 2>&1; then
+      echo "Tag exists, skipping release creation."
+      exit 0
+      fi
+
+    - name: Create Release
+    if: success() # Only runs if previous step did not exit
+    uses: actions/create-release@v1
+    with:
+    tag_name: ${{ github.ref_name }}
+    release_name: Release ${{ github.ref_name }}
